Test for fixed background on mobile devices

--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -15,6 +15,25 @@ body {
     -o-background-size: cover;
 }
 
+body:after {
+    content: "";
+    position: fixed; /* stretch a fixed position to the whole screen */
+    top: 0;
+    height: 100vh; /* fix for mobile browser address bar appearing disappearing */
+    left: 0;
+    right: 0;
+    z-index: -1; /* needed to keep in the background */
+    background-image: linear-gradient(
+            rgba(0, 0, 0, 0.6),
+            rgba(0, 0, 0, 0.6)
+    ),
+    url('../images/background.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
@@ -243,12 +262,12 @@ nav.shift ul li a:hover:after {
     border-radius: 5px;
     opacity: 0;
     transition: all 0.4s ease-in-out 0s;
-    background: lightcoral url('../images/angle-up-solid.svg') no-repeat center 50%;
+    background: whitesmoke url('../images/angle-up-solid.svg') no-repeat center 50%;
 }
 
-.scrollTop:hover {
-    background-color: whitesmoke;
-}
+/*.scrollTop:hover {*/
+    /*background-color: whitesmoke;*/
+/*}*/
 
 @media only screen and (min-width: 1024px) {
     .scrollTop {
